<resources>
    <string name="city_is_not_exist">Выбранного города не существует</string>
    <string name="app_name" translatable="false">Weather App</string>
    <string name="indicator_with_slash" translatable="false">°C /</string>
    <string name="indicator" translatable="false">°C</string>
    <string name="feels_like">Ощущается как:</string>
    <string name="settings_button">Настройки</string>
    <string name="max_min_base_temp" translatable="false">--</string>
    <string name="default_day_temp" translatable="false">--</string>
    <string name="default_night_temp" translatable="false">--</string>
    <string name="default_atmosphere_pressure" translatable="false">--</string>
    <string name="default_wind_speed" translatable="false">--</string>
    <string name="default_humidity" translatable="false">--</string>
    <string name="pressure_view">Атмосферное давление:</string>
    <string name="wind_speed_view">Скорость ветра:</string>
    <string name="humidity_view">Влажность воздуха:</string>
    <string name="humidity_indicator" translatable="false">%</string>
    <string name="pressure_indicator" translatable="false">мм рт.ст</string>
    <string name="wind_speed_indicator" translatable="false">м/с</string>
    <string name="moscow">Москва</string>
    <string name="chose_city_button">Изменить город</string>
    <string name="week_weather_button">Погода на неделю</string>
    <string name="default_week_weather_url" translatable="false">https://yandex.ru/pogoda/Moscow</string>
    <string name="add_params_text">Дополнительные параметры:</string>
    <string name="weather_today_forecast">Прогноз погоды на сегодня (</string>
    <string name="brace" translatable="false">):</string>
    <string name="brace_start" translatable="false">(</string>
    <string name="brace_end" translatable="false">)</string>
    <string name="weather_week_forecast">Прогноз погоды на пять дней:</string>
    <string name="change_params">Настроить</string>
    <string name="today">Сегодня</string>
    <string name="tomorrow">Завтра</string>
    <string-array name="days_of_week">
        <item>Сегодня</item>
        <item>Завтра</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
    </string-array>
    <string name="chose_city_screen_name">Выберите город</string>
    <string name="chose_city_fragment">Введите название города:</string>
    <string name="chose_city_text_edit">Введите название города</string>
    <string name="chose_parameters">Показать дополнительно:</string>
    <string name="check_box_pressure">Атмосферное давление</string>
    <string name="check_box_wind_speed">Скорость ветра</string>
    <string name="check_box_humidity">Влажность воздуха</string>
    <string name="list_of_cities">Список городов</string>
    <string name="ok_button">ОК</string>
    <string name="forecast_text">Прогноз погоды на сегодня в г.</string>
    <string name="recycler_title">Ранее выбранные города:</string>
    <string-array name="cities_array">
        <item>Москва</item>                 <item>Санкт-Петербург</item>
        <item>Анапа</item>                  <item>Владивосток</item>
        <item>Владимир</item>               <item>Волгоград</item>
        <item>Воронеж</item>                <item>Екатеринбург</item>
        <item>Казань</item>                 <item>Калининград</item>
        <item>Нижний Новгород</item>        <item>Новосибирск</item>
        <item>Сочи</item>                   <item>Омск</item>
        <item>Ростов-на-Дону</item>         <item>Самара</item>
        <item>Суздаль</item>                <item>Тверь</item>
        <item>Уфа</item>                    <item>Челябинск</item>
        <item>Ярославль</item>              <item>Красноярск</item>
        <item>Пермь</item>                  <item>Краснодар</item>
        <item>Саратов</item>                <item>Тюмень</item>
        <item>Тольятти</item>               <item>Ижевск</item>
        <item>Барнаул</item>                <item>Ульяновск</item>
        <item>Иркутск</item>                <item>Хабаровск</item>
        <item>Махачкала</item>              <item>Томск</item>
        <item>Оренбург</item>               <item>Кемерово</item>
        <item>Новокузнецк</item>            <item>Рязань</item>
        <item>Набережные челны</item>       <item>Астрахань</item>
        <item>Пенза</item>                  <item>Киров</item>
        <item>Липецк</item>                 <item>Чебоксары</item>
        <item>Ставрополь</item>             <item>Севастополь</item>
        <item>Улан-Удэ</item>               <item>Магнитогорск</item>
        <item>Брянск</item>                 <item>Белгород</item>
        <item>Сургут</item>                 <item>Чита</item>
        <item>Нижний Тагил</item>           <item>Архангельск</item>
        <item>Симферополь</item>            <item>Калуга</item>
        <item>Смоленск</item>               <item>Якутск</item>
        <item>Саранск</item>                <item>Орел</item>
        <item>Подольск</item>               <item>Грозный</item>
        <item>Владикавказ</item>            <item>Мурманск</item>
        <item>Тамбов</item>                 <item>Белгород</item>
        <item>Йошкар-Ола</item>             <item>Таганрог</item>
        <item>Нижнекамск</item>             <item>Комсомольк-на-Амуре</item>
        <item>Тюмень</item>                 <item>Южно-Сахалинск</item>
    </string-array>
    <string-array name="cities_array_for_openweathermap">
        <item>Moscow</item>                     <item>Sankt-Peterburg</item>
        <item>Anapa</item>                      <item>Vladivostok</item>
        <item>Vladimir</item>                   <item>Volgograd</item>
        <item>Voronezh</item>                   <item>Ekaterinburg</item>
        <item>Kazan</item>                      <item>Kaliningrad</item>
        <item>Nizhny Novgorod</item>            <item>Novosibirsk</item>
        <item>Sochi</item>                      <item>Omsk</item>
        <item>Rostov-na-Donu</item>             <item>Samara</item>
        <item>Suzdal</item>                     <item>Tver</item>
        <item>Ufa</item>                        <item>Chelyabinsk</item>
        <item>Yaroslavl</item>                  <item>Krasnoyarsk</item>
        <item>Perm</item>                       <item>Krasnodar</item>
        <item>Saratov</item>                    <item>Tyumen</item>
        <item>Tolyatti</item>                   <item>Izhevsk</item>
        <item>Barnaul</item>                    <item>Ulyanovsk</item>
        <item>Irkutsk</item>                    <item>Khabarovsk</item>
        <item>Makhachkala</item>                <item>Tomsk</item>
        <item>Orenburg</item>                   <item>Kemerovo</item>
        <item>Novokuznetsk</item>               <item>Ryazan</item>
        <item>Naberezhnye Chelny</item>         <item>Astrakhan</item>
        <item>Penza</item>                      <item>Kirov</item>
        <item>Lipetsk</item>                    <item>Cheboksary</item>
        <item>Stavropol</item>                  <item>Sevastopol</item>
        <item>Ulan-Ude</item>                   <item>Magnitogorsk</item>
        <item>Bryansk</item>                    <item>Belgorod</item>
        <item>Surgut</item>                     <item>Chita</item>
        <item>Nizhny Tagil</item>               <item>Arkhangelsk</item>
        <item>Simferopol</item>                 <item>Kaluga</item>
        <item>Smolensk</item>                   <item>Yakutsk</item>
        <item>Saransk</item>                    <item>Orel</item>
        <item>Podolsk</item>                    <item>Grozny</item>
        <item>Vladikavkaz</item>                <item>Murmansk</item>
        <item>Tambov</item>                     <item>Belgorod</item>
        <item>Yoshkar-Ola</item>                <item>Taganrog</item>
        <item>Nizhnekamsk</item>                <item>Komsomolsk-na-Amure</item>
        <item>Tyumen</item>                     <item>Yuzhno-Sakhalinsk</item>
    </string-array>
    <string name="settings_screen_name">Настройки</string>
    <string name="set_theme">Выберите тему:</string>
    <string name="dark_theme">Темная тема</string>
    <string name="light_theme">Светлая тема</string>
    <string name="set_language">Выберите язык интерфейса:</string>
    <string name="en_language">Английский язык</string>
    <string name="ru_language">Русский язык</string>
    <string name="about">О приложении</string>
    <string name="about_app">Учебный проект Geekbrains</string>
    <string-array name="day_degrees_array">
        <item> -11</item>         <item> -2</item>         <item> -17</item>         <item> -3</item>
        <item> -25</item>         <item> -13</item>        <item> -15</item>         <item> -14</item>
        <item> -6</item>          <item> -19</item>        <item> -18</item>         <item> -1</item>
        <item> -7</item>          <item> -22</item>        <item> -9</item>          <item> -21</item>
        <item> -12</item>         <item> -10</item>        <item> -20</item>         <item> -4</item>
        <item> -11</item>         <item> -2</item>         <item> -17</item>         <item> -3</item>
        <item> -25</item>         <item> -13</item>        <item> -15</item>         <item> -14</item>
        <item> -6</item>          <item> -19</item>        <item> -18</item>         <item> -1</item>
        <item> -7</item>          <item> -22</item>        <item> -9</item>          <item> -21</item>
        <item> -12</item>         <item> -10</item>        <item> -20</item>         <item> -4</item>
        <item> -11</item>         <item> -2</item>         <item> -17</item>         <item> -3</item>
        <item> -25</item>         <item> -13</item>        <item> -15</item>         <item> -14</item>
        <item> -6</item>          <item> -19</item>        <item> -18</item>         <item> -1</item>
        <item> -7</item>          <item> -22</item>        <item> -9</item>          <item> -21</item>
        <item> -12</item>         <item> -10</item>        <item> -20</item>         <item> -4</item>
        <item> -18</item>         <item> -1</item>         <item> -7</item>          <item> -22</item>
        <item> -9</item>          <item> -21</item>        <item> -12</item>         <item> -10</item>
        <item> -20</item>         <item> -4</item>         <item> -22</item>         <item> -10</item>
    </string-array>
</resources>