<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_border">

    <TextView
        android:id="@+id/choseAdditionalPapamsView"
        style="@style/HintText"
        android:text="@string/chose_parameters"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/checkBoxPressure"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:background="@color/second_text_color"
        app:layout_constraintBottom_toBottomOf="@+id/checkBoxPressure"
        app:layout_constraintEnd_toEndOf="@+id/checkBoxPressure"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="@+id/choseAdditionalPapamsView"
        app:layout_constraintTop_toTopOf="@+id/checkBoxPressure"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/checkBoxPressure"
        style="@style/CheckBoxAndRadioButton"
        android:checked="false"
        android:text="@string/check_box_pressure"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.306" />

    <CheckBox
        android:id="@+id/checkBoxWindSpeed"
        style="@style/CheckBoxAndRadioButton"
        android:text="@string/check_box_wind_speed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/checkBoxPressure"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxPressure"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/checkBoxAirHumidity"
        style="@style/CheckBoxAndRadioButton"
        android:text="@string/check_box_humidity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/checkBoxWindSpeed"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxWindSpeed"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>