<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_border">

    <TextView
        android:id="@+id/setThemeView"
        style="@style/HintText"
        android:text="@string/set_theme"
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/radioGroupThemes"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:background="@color/second_text_color"
        app:layout_constraintBottom_toTopOf="@+id/setThemeView"
        app:layout_constraintEnd_toEndOf="@+id/radioGroupThemes"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="@+id/setThemeView"
        app:layout_constraintTop_toTopOf="@+id/radioGroupThemes"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/radioGroupThemes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <RadioButton
            android:id="@+id/radioButtonDarkTheme"
            style="@style/CheckBoxAndRadioButton"
            android:text="@string/dark_theme" />

        <RadioButton
            android:id="@+id/radioButtonLightTheme"
            style="@style/CheckBoxAndRadioButton"
            android:text="@string/light_theme" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>