<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_border">

    <TextView
        android:id="@+id/addParamsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="7dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="75dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:text="@string/add_params_text"
        android:textColor="@color/second_text_color"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/lineOne"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:background="@color/second_text_color"
        app:layout_constraintBottom_toBottomOf="@+id/atmospherePressureInfoView"
        app:layout_constraintEnd_toEndOf="@+id/atmospherePressureIndicatorView"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="@+id/addParamsText"
        app:layout_constraintTop_toTopOf="@+id/atmospherePressureMainView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/atmospherePressureMainView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:layout_marginBottom="75dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:text="@string/pressure_view"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/atmPressureImageView"
        app:layout_constraintTop_toBottomOf="@+id/addParamsText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/atmospherePressureInfoView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/default_atmosphere_pressure"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/atmospherePressureIndicatorView"
        app:layout_constraintEnd_toStartOf="@+id/atmospherePressureIndicatorView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/atmospherePressureMainView"
        app:layout_constraintTop_toTopOf="@+id/atmospherePressureIndicatorView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/atmospherePressureIndicatorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:layout_marginEnd="6dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:text="@string/pressure_indicator"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/atmospherePressureMainView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/atmospherePressureMainView"
        app:layout_constraintTop_toTopOf="@+id/atmospherePressureMainView"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/lineTwo"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:visibility="gone"
        android:background="@color/second_text_color"
        app:layout_constraintBottom_toBottomOf="@+id/atmospherePressureInfoView"
        app:layout_constraintEnd_toEndOf="@+id/atmospherePressureIndicatorView"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toStartOf="@+id/atmospherePressureMainView"
        app:layout_constraintTop_toBottomOf="@+id/atmospherePressureMainView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/windSpeedMainView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:text="@string/wind_speed_view"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/windSpeedImageView"
        app:layout_constraintTop_toBottomOf="@+id/lineTwo"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/windSpeedInfoView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/default_wind_speed"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/windSpeedIndicatorView"
        app:layout_constraintEnd_toStartOf="@+id/windSpeedIndicatorView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/windSpeedMainView"
        app:layout_constraintTop_toTopOf="@+id/windSpeedIndicatorView" />

    <TextView
        android:id="@+id/windSpeedIndicatorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:layout_marginEnd="6dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:text="@string/wind_speed_indicator"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/windSpeedMainView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/windSpeedMainView"
        app:layout_constraintTop_toTopOf="@+id/windSpeedMainView"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/lineThree"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:background="@color/second_text_color"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/humidityMainView"
        app:layout_constraintEnd_toEndOf="@+id/lineTwo"
        app:layout_constraintStart_toStartOf="@+id/lineTwo"
        app:layout_constraintTop_toBottomOf="@+id/windSpeedMainView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/humidityMainView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:layout_marginBottom="75dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:text="@string/humidity_view"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/humidityImageView"
        app:layout_constraintTop_toBottomOf="@+id/windSpeedMainView" />

    <TextView
        android:id="@+id/humidityInfoView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/default_humidity"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/humidityIndicatorView"
        app:layout_constraintEnd_toStartOf="@+id/humidityIndicatorView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/humidityMainView"
        app:layout_constraintTop_toTopOf="@+id/humidityIndicatorView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/humidityIndicatorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:layout_marginEnd="6dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:text="@string/humidity_indicator"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/humidityMainView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/humidityMainView"
        app:layout_constraintTop_toTopOf="@+id/humidityMainView"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/atmPressureImageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="6dp"
        android:paddingHorizontal="6dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/atmospherePressureMainView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/atmospherePressureMainView"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/atm_pressure_drawable" />

    <ImageView
        android:id="@+id/windSpeedImageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="75dp"
        android:layout_marginStart="6dp"
        android:paddingHorizontal="6dp"
        android:paddingVertical="6dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/windSpeedMainView"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/wind_speed_drawable" />

    <ImageView
        android:id="@+id/humidityImageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:paddingVertical="6dp"
        android:layout_marginStart="6dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/humidityMainView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/humidityMainView"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/humidity_drawable" />

    <Button
        android:id="@+id/changeParamsButton"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/rounded_button"
        android:backgroundTintMode="src_atop"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:onClick="onClickSetCity"
        android:paddingStart="15dp"
        android:paddingTop="2dp"
        android:paddingEnd="15dp"
        android:paddingBottom="2dp"
        android:shadowColor="@color/fragment_color"
        android:stateListAnimator="@anim/alpha"
        android:text="@string/change_params"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textColorHighlight="@color/button_highlight_color"
        android:textColorLink="@color/purple_200"
        android:textCursorDrawable="@color/text_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>