<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_border">

    <TextView
        android:id="@+id/forecastForCityView"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="6dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:text="@string/forecast_text"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/chosenCityView"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:paddingStart="4dp"
        android:text="@string/moscow"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/forecastForCityView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/forecastForCityView"
        app:layout_constraintTop_toTopOf="@+id/forecastForCityView"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/cityButton"
        android:text="@string/chose_city_button"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_button"
        android:backgroundTintMode="src_atop"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:onClick="onClickSetCity"
        android:paddingStart="15dp"
        android:paddingTop="2dp"
        android:paddingEnd="15dp"
        android:paddingBottom="2dp"
        android:shadowColor="@color/fragment_color"
        android:stateListAnimator="@anim/alpha"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textColorHighlight="@color/button_highlight_color"
        android:textColorLink="@color/purple_200"
        android:textCursorDrawable="@color/text_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forecastForCityView"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>